fixed some of responsive and layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
 
 body {
   max-width: 100dvw;
+  width: 100%;
   height: 100dvh;
   overflow-x: hidden;
   display: flex;
