--- a/app/page.module.css
+++ b/app/page.module.css
@@ -14,13 +14,14 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  overflow-x: hidden;
 }
 
 .container {
   position: absolute;
   top: 30%;
-  left: -20%;
-  width: 140%;
+  left: 10%;
+  width: 80%;
   max-height: 540px;
   z-index: -1;
   height: 100%;
